using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "IsMoving";

    internal static string isRunning = "IsRunning";
    internal static string isGrounded= "IsGrounded";
    internal static string yVelocity= "yVelocity";
    internal static string jump = "jump";
    internal static string IsOnWall="IsOnWall";

    public static string IsOnCeiling ="IsOnCeiling";
}
